--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*index.html css code*/
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: #dedce1;
+    background: #f5f58a;
     padding: 0 px;
     margin: 20px;
 }
 .container {
     max-width: 600px;
-    background: #d5c9e1;
+    background:#d5c9e1;
     padding: 20px;
     max-width: 1000px;
     margin: 30px auto;
@@ -35,7 +35,7 @@ ul {
 }
 
 featureType ul li {
-  background-color: #eeeeee;
+  background-color: #ead3d3;
   border-left: 5px solid #b47ae4;
   margin-bottom: 10px;
   padding: 10px 15px;
@@ -44,15 +44,7 @@ featureType ul li {
   transition: background-color 0.3s;
 }
 
-navBar ul li {
- background-color: #eeeeee;
-  border-left: 5px solid #b47ae4;
-  margin-bottom: 10px;
-  padding: 10px 15px;
-  font-size: 1.1rem;
-  border-radius: 5px;
-  transition: background-color 0.3s;
-}
+
 
 /* Hover effect for each item */
  featureType ul li:hover {
@@ -113,7 +105,7 @@ button {
  button:focus,
  button:active {
   transform: translateY(4px); /* Moves the button down */
-  background-color: #dedce1;  /* Optional: darker on hover */
+  background-color: #dedce1; #dedce1;  /* Optional: darker on hover */
 }
 
 
@@ -190,7 +182,7 @@ nav button:hover,
 nav button:focus,
 nav button:active {
   transform: translateY(4px); /* Moves the button down */
-  background-color: #dac4e6;  /* Optional: darker on hover */
+  background-color: #de92d9;  /* Optional: darker on hover */
 }
 
 
@@ -209,13 +201,15 @@ subject-entry label {
 }
 
 nav ul {
-  background-color: #d1cad9;;
+  background-color: #b094d1;;
  list-style: none;
   padding: 10px;
   display: flex;
   justify-content: center;
-  border-radius: 20px;
+  border-radius: 50px;
+  border: 2px solid black;
 }
+
 nav ul li {
   margin: 0 15px;
 }
